// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<ul
  class="EntityList"
  data-test-id="cf-ui-entity-list"
/>
`;

exports[`renders the component with EntityListItems as children 1`] = `
.emotion-1 {
  display: inherit;
  outline: 0;
}

.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<ul
  class="EntityList"
  data-test-id="cf-ui-entity-list"
>
  <li
    class="EntityListItem"
    data-test-id="cf-ui-entity-list-item"
  >
    <article
      class="EntityListItem__inner"
    >
      <span
        class="emotion-1 EntityListItem__focus-trap"
        tabindex="-1"
      >
        <figure
          class="EntityListItem__media"
        >
          <svg
            class="emotion-0"
            data-test-id="cf-ui-icon"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M8 16h8v2H8zM8 12h8v2H8z"
            />
            <path
              d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
            />
          </svg>
        </figure>
        <div
          class="EntityListItem__content"
        >
          <div
            class="EntityListItem__heading"
          >
            <h1
              class="EntityListItem__title"
            >
              Entry 1
            </h1>
            <div
              class="EntityListItem__content-type"
            >
              (
              My content type
              )
            </div>
          </div>
          <p
            class="EntityListItem__description"
          >
            Description 1
          </p>
        </div>
        <div
          class="EntityListItem__meta"
        />
      </span>
    </article>
  </li>
  <li
    class="EntityListItem"
    data-test-id="cf-ui-entity-list-item"
  >
    <article
      class="EntityListItem__inner"
    >
      <span
        class="emotion-1 EntityListItem__focus-trap"
        tabindex="-1"
      >
        <figure
          class="EntityListItem__media"
        >
          <svg
            class="emotion-0"
            data-test-id="cf-ui-icon"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M8 16h8v2H8zM8 12h8v2H8z"
            />
            <path
              d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
            />
          </svg>
        </figure>
        <div
          class="EntityListItem__content"
        >
          <div
            class="EntityListItem__heading"
          >
            <h1
              class="EntityListItem__title"
            >
              Entry 2
            </h1>
            <div
              class="EntityListItem__content-type"
            >
              (
              My content type
              )
            </div>
          </div>
          <p
            class="EntityListItem__description"
          >
            Description 2
          </p>
        </div>
        <div
          class="EntityListItem__meta"
        />
      </span>
    </article>
  </li>
  <li
    class="EntityListItem"
    data-test-id="cf-ui-entity-list-item"
  >
    <article
      class="EntityListItem__inner"
    >
      <span
        class="emotion-1 EntityListItem__focus-trap"
        tabindex="-1"
      >
        <figure
          class="EntityListItem__media"
        >
          <svg
            class="emotion-0"
            data-test-id="cf-ui-icon"
            viewBox="0 0 24 24"
          >
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M8 16h8v2H8zM8 12h8v2H8z"
            />
            <path
              d="M14 2H6c-1.1 0-2 .9-2 2v16c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"
            />
          </svg>
        </figure>
        <div
          class="EntityListItem__content"
        >
          <div
            class="EntityListItem__heading"
          >
            <h1
              class="EntityListItem__title"
            >
              Entry 3
            </h1>
            <div
              class="EntityListItem__content-type"
            >
              (
              My content type
              )
            </div>
          </div>
          <p
            class="EntityListItem__description"
          >
            Description 2
          </p>
        </div>
        <div
          class="EntityListItem__meta"
        />
      </span>
    </article>
  </li>
</ul>
`;

exports[`renders the component with an additional class name 1`] = `
<ul
  class="EntityList my-extra-class"
  data-test-id="cf-ui-entity-list"
/>
`;
